--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,7 +122,7 @@
         <item>Raja City</item>
         <item>Rojonigondha</item>
         <item>Rajdhani Super</item>
-        <item>Ramjan</item>
+        <item>Romjan</item>
         <item>Robrob</item>
         <item>Rois</item>
         <item>Rongdhonu Express</item>
@@ -133,8 +133,8 @@
         <item>Sakalpa Transport</item>
         <item>Salsabil</item>
         <item>Savar Paribahan</item>
-        <item>Shadhin</item>
-        <item>Shadhin Express</item>
+        <item>Sadhin</item>
+        <item>Sadhin Express</item>
         <item>Shahria Enterprise</item>
         <item>Shatabdi</item>
         <item>Shikhor Paribahan</item>
@@ -150,7 +150,7 @@
         <item>Swajan Paribahan</item>
         <item>Talukdar</item>
         <item>Tanjil Paribahan</item>
-        <item>Taranga Plus</item>
+        <item>Torongo Plus</item>
         <item>Tetulia</item>
         <item>Thikana</item>
         <item>Thikana Express</item>
